--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 <!DOCTYPE html>
 <meta charset="UTF-8" />
 <title>JSPackCrx Test Page</title>
-<script type="text/javascript" src="jspackcrx.js" async="true"></script>
+<script type="text/javascript" src="jspackcrx_include.js" async="true"></script>
 <script type="text/javascript" src="demo/jszip.js" async="true"></script>
 <script type="text/javascript" src="demo/FileSaver.min.js" async="true"></script>
 
