--- a/trunk/test.html
+++ b/trunk/test.html
@@ -12,8 +12,8 @@
 <meta charset="UTF-8" />
 <title>JSPackCrx Test Page</title>
 <script type="text/javascript" src="jspackcrx.js" async="true"></script>
-<script type="text/javascript" src="demo/jszip.js" async="true"></script>
-<script type="text/javascript" src="demo/FileSaver.min.js" async="true"></script>
+<script type="text/javascript" src="misc/jszip.js" async="true"></script>
+<script type="text/javascript" src="misc/FileSaver.min.js" async="true"></script>
 
 <script type="text/javascript">
 //load JSPackCrx asyncronously
@@ -108,8 +108,11 @@ Manifest:
     "launch": {
 	  "web_url": "http://appmanifest.org/"
 	}
-  },  "icons": {
+  },
+  "icons": {
     "128": "/img/logo_128.png"
   }
 }
+</textarea>
+
 <pre id="hex" style="float:right;display:inline-block;border:1px solid grey;padding:10px;overflow-y:scroll;height:400px"></pre>
