--- a/test.html
+++ b/test.html
@@ -32,15 +32,14 @@ function packagecrx() {
 
 	crx.generatePrivateKeySignature({exponent:3},function(){
 
-		crx.generateCrx("string",function(){
-			//downloadBlob(this.crx.header + this.zip.string);
-			hexview(toDownload=this.crx.header + this.zip.string);
-			this.terminate();
+		crx.generateCrx(function(e){
+			hexview(e.target.crx.full);
+			e.target.terminate();
 		});
 	});
 }
 function hexview(chars) {
-	var hex = char2hex(chars).split("");
+	var hex = ab2hex(chars);
 	hex.forEach(function(e,i){
 
 		if (i%32==31) hex[i]+="\n";
@@ -48,6 +47,14 @@ function hexview(chars) {
 		else if (i%2==1) hex[i]+=" ";
 	});
 	document.getElementById("hex").innerHTML = hex.join("");
+}
+function ab2hex(arrayBuffer) {
+	var arr = new Uint8Array(arrayBuffer);
+	return [].map.call(arr,function(n) {
+		n = n.toString(16);
+		if (n.length < 2) n = "0" + n;
+		return n;
+	});
 }
 function char2hex(chars,lowercase) { // also purty :)
 	chars = chars.toString();
