--- a/test.html
+++ b/test.html
@@ -42,9 +42,9 @@ function hexview(chars) {
 	var hex = ab2hex(chars);
 	hex.forEach(function(e,i){
 
-		if (i%32==31) hex[i]+="\n";
-		else if (i%8==7) hex[i]+="  ";
-		else if (i%2==1) hex[i]+=" ";
+		if (i%16==15) hex[i]+="\n";
+		else if (i%4==3) hex[i]+="  ";
+		else hex[i]+=" ";
 	});
 	document.getElementById("hex").innerHTML = hex.join("");
 }
